--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
     <section class="review about">
         <div class="container ">
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4">
+                <div class="col-sm-2 col-lg-4"></div>
+                <div class="col-sm-8 col-lg-4">
 
                     <h2 class="text-center text-uppercase mb-5 mt-5 color2">Review of the course</h2>
                     <div class="img-review mb-3"><img src="img/people.jpg" class="people-review" alt=""></div>
@@ -340,7 +340,7 @@
                     <div class="line"></div>
 
                 </div>
-                <div class="col-4"></div>
+                <div class="col-sm-2 col-lg-4"></div>
 
             </div>
         </div>
